--- a/chatgpt/pubspec.yaml
+++ b/chatgpt/pubspec.yaml
@@ -35,10 +35,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  http: ^1.1.2 
+  http: ^0.13.3 
   flutter_spinkit: ^5.2.0
   provider : ^6.1.1
   animated_text_kit: ^4.2.2
+  change_app_package_name:
+  flutter_automation: ^2.0.0
 
 
 dev_dependencies:
